# wineOntology

./: .gitignore  Generation_A_Box.ipynb  index.html  pyproject.toml  report.html  report.ttl  wine.owl  wines.rdf  wines_regions.rdf
OnToology/ontology/wine-A-Box.rdf/context/: context.jsonld
OnToology/ontology/wine-A-Box.rdf/diagrams/ar2dtool-class/: wine-A-Box.rdf.png.dot  (+1 more)
OnToology/ontology/wine-A-Box.rdf/documentation/: index-en.html  ontology.jsonld  ontology.nt  ontology.rdf  ontology.ttl  wine-A-Box.rdf.widoco.conf
OnToology/ontology/wines.rdf/context/: context.jsonld
OnToology/ontology/wines.rdf/documentation/: index-en.html  ontology.jsonld  ontology.rdf  ontology.ttl  wines.rdf.widoco.conf
OnToology/ontology/wines_regions.rdf/context/: context.jsonld
OnToology/ontology/wines_regions.rdf/documentation/: index-en.html  ontology.nt  ontology.ttl
OnToology/wines.rdf/diagrams/ar2dtool-class/: wines.rdf.png.dot
OnToology/wines.rdf/diagrams/ar2dtool-taxonomy/: wines.rdf.png.graphml
OnToology/wines.rdf/documentation/: index-en.html
OnToology/wines_regions.rdf/diagrams/ar2dtool-class/: wines_regions.rdf.png.dot
OnToology/wines_regions.rdf/documentation/: index-en.html  ontology.jsonld  ontology.rdf
OnToology/wines_regions.rdf/documentation/sections/: crossref-en.html
data/: description.txt
data/SPARQL_Queries/: WineRegions.sparql
datasets/: wineRegionGraph.csv  wine_region.csv  wine_region.ttl
datasets/SPARQL_Queries/: WineRegions.sparql  WineRegionsGraph.sparql
ontologies/: wine-A-Box.rdf
ontology/: wine.owl  wines.rdf
(+19 files in other folders)
