[tool.poetry]
name = "wineontology"
version = "0.1.0"
description = ""
authors = ["Aitor Corchero Rodríguez <aitorcorchero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
d2s = "^0.3.3"
pyshacl = "^0.20.0"
rdflib-jsonld = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

